@@ -1,15 +1,12 @@
 package com.example.society.enums;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
 public enum Sex {
     MAN, WOMAN;
 
-    private static final List<Sex> VALUES =
-            Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<Sex> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
